# nodespace-core

./: .gitignore  .mcp.json  ADVANCED_FORMATTING_IMPLEMENTATION.md  BASENODE-TO-MINIMALBASENODE-TRANSITION.md  CLAUDE.md  CODEMIRROR_EVALUATION.md  Cargo.toml  Dockerfile.dev  HANDOFF-SQLITE-FLAKINESS.md  INVESTIGATION-266.md  ISSUE-465-IMPLEMENTATION-SUMMARY.md  LICENSE  NodeSpace_Text_Editor_Technical_Evaluation.md  PHASE2-IMPLEMENTATION-SUMMARY.md  PR_485_REVIEW.md  README.md  TEST_UPDATE_SUMMARY.md  TOGGLE_FIXES_SUMMARY.md  UNIVERSAL_REFERENCES_SYSTEM_UNLOCKED.md  architectural-analysis-backlinking-evolution.md  contenteditable-implementation-summary.md  enforce-bun.js  history.txt  measure-circles.js  package.json  pr-469-phase2-rereview.md  pr-469-phase2-review.md  pr-469-review.md  reference-audit.txt  review-report.md  test-design-system.js  test-hybrid-markdown.html  test-node-operations.mjs  test-results.txt  test-terminal-size.sh  validate-docs.cjs
.claude/: settings.json
.claude/agents/: ai-ml-engineer.md  frontend-architect.md  frontend-expert.md  performance-engineer.md  pragmatic-code-reviewer.md  senior-architect-reviewer.md  ux-design-expert.md
.claude/commands/: address-review.md  code-review.md  github-issue-management.md  pragmatic-code-review.md
.github/workflows/: ci.yml  release.yml
docs/: GHOSTTY-DOCKER-SETUP.md  IMPLEMENTATION_STATUS.md
docs/architecture/: ARCHITECTURE-OVERVIEW-2025.md  architecture-target-state.md  dependency-based-persistence.md  elegant-persistence-solution.md  frontend-architecture.md  mcp-integration-gaps.md  multi-tab-reactivity-investigation.md  persistence-architecture.md  persistence-layer.md  persistence-system.md  validation-strategy.md
docs/archive/: README.md
docs/design-system/: COMPONENT_ARCHITECTURE.md  ai-chat-node-viewer.html  colors.html  index.html  (+8 more)
nodespace-app/: .npmrc  .oxlintrc.json  .prettierignore  BUNDLE_ANALYSIS.md  INTEGRATION_TESTING_SUMMARY.md  REACTIVE_FIX_SUMMARY.md  README.md  components.json  debug_test.html  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.ts
scripts/: bulk-update-links.ts  check-project-assignment.ts  check-project-sync.ts  container.ts  create-mentions-relationships.ts  download-models.ts  fix-collection-membership.ts  gh-api.ts  gh-utils.ts  github-client.ts  import-docs.ts  mcp-bridge.bat  mcp-bridge.sh  mcp-proxy.js  release.ts  resolve-doc-links.ts  review-manager.ts  setup-git-hooks.ts
(+537 files in other folders)
