[workspace]
members = [
    "packages/core",
    "packages/nlp-engine",
    "packages/desktop-app/src-tauri",
    "packages/dev-tools"
]
resolver = "2"

[workspace.package]
authors = ["NodeSpace Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/malibio/nodespace-core"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"
libsql = "0.6"
surrealdb = { version = "^2.3", features = ["kv-rocksdb", "protocol-http"], default-features = false }
tracing = "0.1"
nodespace-core = { path = "packages/core" }
nodespace-nlp-engine = { path = "packages/nlp-engine" }

# Dev dependencies (shared via workspace inheritance)
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3  # Use speed optimization, not size - critical for SurrealDB performance
strip = true